# despot_tutorials

./: README.md
examples/laser_tag/: CMakeLists.txt  package.xml
examples/laser_tag/include/laser_tag/pomdp_planner/: laser_tag_world.h
examples/laser_tag/include/laser_tag/pomdp_planner/base/: base_tag.h  base_tag.h~
examples/laser_tag/include/laser_tag/robot_controller/: youbot_interface.h
examples/laser_tag/include/pomdp_planner/: laser_tag.h
examples/laser_tag/include/robot_controller/: laser_tag_controller.h
examples/laser_tag/include/unified_pomdp_planner/: tag_belief.h  tag_blind_beliefpolicy.h  tag_manhattan_upperbound.h  tag_shr_policy.h  tag_sp_particleupperbound.h  tag_state.h  unified_laser_tag.h  unified_laser_tag_world.h
examples/laser_tag/launch/: laser_tag.launch
examples/laser_tag/src/pomdp_planner/: laser_tag.cpp  laser_tag_world.cpp  main.cpp  main.cpp~
examples/laser_tag/src/pomdp_planner/base/: base_tag.cpp  base_tag.cpp~
examples/laser_tag/src/robot_controller/: README.md  laser_tag_controller.cpp  youbot_interface.cpp
examples/laser_tag/src/unified_pomdp_planner/: main.cpp  tag_belief.cpp  tag_blind_beliefpolicy.cpp  tag_manhattan_upperbound.cpp  tag_shr_policy.cpp  tag_sp_particleupperbound.cpp  tag_state.cpp  unified_laser_tag.cpp  unified_laser_tag_world.cpp
examples/laser_tag/srv/: TagActionObs.srv  YoubotActionObs.srv
examples/laser_tag/test/: test_laser_tag_controller.cpp
examples/laser_tag/worlds/: 7x11_grid.world
robots/youbot/youbot_description/: CMakeLists.txt  README.md
robots/youbot/youbot_description/meshes/youbot_base/: target.dae
robots/youbot/youbot_description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_base_laser.urdf.xacro  youbot_base_only.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_target.urdf.xacro
robots/youbot/youbot_description/urdf/: common.xacro
robots/youbot/youbot_description/urdf/misc/: cam3d_tower.urdf.xacro  sensor_angle.urdf.xacro
robots/youbot/youbot_description/urdf/sensors/: asus_xtion_camera.gazebo.xacro  asus_xtion_camera.urdf.xacro  hokuyo_urg04_laser.gazebo.xacro  hokuyo_urg04_laser.urdf.xacro  hokuyo_urg04_laser_(perfect).urdf.xacro  kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro  microsoft_lifecam.gazebo.xacro  microsoft_lifecam.urdf.xacro
robots/youbot/youbot_description/urdf/youbot_arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro  limits.urdf.xacro
robots/youbot/youbot_description/urdf/youbot_base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro  target_base.urdf.xacro
robots/youbot/youbot_description/urdf/youbot_gripper/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  limits.urdf.xacro
robots/youbot/youbot_description/urdf/youbot_plate/: plate.urdf.xacro
robots/youbot/youbot_simulation/youbot_gazebo_control/: package.xml
robots/youbot/youbot_simulation/youbot_gazebo_control/config/: joint_state_controller.yaml
robots/youbot/youbot_simulation/youbot_gazebo_robot/: package.xml
robots/youbot/youbot_simulation/youbot_gazebo_worlds/: CMakeLists.txt  package.xml
robots/youbot/youbot_simulation/youbot_simulation/: package.xml
(+7 files in other folders)
